Move main bot config from TOML to HOCON